[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Village/AcademyBuilding.gd" type="Script" id=1]
[ext_resource path="res://UIpack/UI/blue_button13.png" type="Texture" id=2]
[ext_resource path="res://UIpack/UI/blue_button04.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Village/Building_ProgBar.gd" type="Script" id=4]
[ext_resource path="res://Fontpack/Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Tileset/BuildingSprites.tres" type="TileSet" id=6]
[ext_resource path="res://Scripts/Village/BldgImg.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Village/level2_academyimg.gd" type="Script" id=8]
[ext_resource path="res://UIpack/UI/grey_button14.png" type="Texture" id=9]
[ext_resource path="res://UIpack/UI/blue_button00.png" type="Texture" id=10]
[ext_resource path="res://Scripts/Village/Levelupbar_academy.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]

size = 20
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="AcademyBuilding" type="Sprite" index="0"]

position = Vector2( 535.987, 257.111 )
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Building_UI" type="Control" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -116.0
margin_top = -117.0
margin_right = 122.0
margin_bottom = 101.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Building_ProgBar" type="TextureProgress" parent="Building_UI" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 29.0
margin_top = 22.0
margin_right = 219.0
margin_bottom = 71.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = ExtResource( 2 )
texture_over = null
texture_progress = ExtResource( 3 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
script = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[node name="Building_Name" type="RichTextLabel" parent="Building_UI" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 26.0
margin_top = 177.0
margin_right = 244.0
margin_bottom = 219.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Academy Building"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "custom_fonts" ]

[node name="BldgImg" type="TileMap" parent="." index="1"]

mode = 0
tile_set = ExtResource( 6 )
cell_size = Vector2( 18, 18 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -65539, 5, 0, -65537, 5, 0, -131072, 5, 0, -131071, 5, 0, -131069, 5, 0, -3, 5, 0, -2, 5, 0, -1, 5, 0, -65536, 5, 0, -65535, 5, 0, -65534, 5, 0, -65533, 5, 0, 65533, 5, 0, 65534, 5, 0, 65535, 5, 0, 0, 5, 0, 1, 5, 0, 2, 5, 0, 3, 5, 0, 131069, 5, 0, 131071, 5, 0, 65536, 5, 0, 65537, 5, 0, 65539, 5, 0, 196605, 5, 0, 196606, 5, 0, 196607, 5, 0, 131072, 5, 0, 131073, 5, 0, 131074, 5, 0, 131075, 5, 0 )
script = ExtResource( 7 )
_sections_unfolded = [ "Cell" ]

[node name="LevelupScheme" type="Control" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -7.0
margin_right = 33.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="level2_academyimg" type="TileMap" parent="LevelupScheme" index="0"]

position = Vector2( 115.574, 76.7422 )
mode = 0
tile_set = ExtResource( 6 )
cell_size = Vector2( 18, 18 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -589833, 5, 0, -589832, 5, 0, -589831, 5, 0, -589829, 5, 0, -589828, 5, 0, -589827, 5, 0, -524297, 5, 0, -524296, 5, 0, -524295, 5, 0, -524293, 5, 0, -524292, 5, 0, -524291, 5, 0, -458761, 5, 0, -458760, 5, 0, -458759, 5, 0, -458758, 5, 0, -458757, 5, 0, -458756, 5, 0, -458755, 5, 0, -393225, 5, 0, -393224, 5, 0, -393223, 5, 0, -393222, 5, 0, -393221, 5, 0, -393220, 5, 0, -393219, 5, 0 )
script = ExtResource( 8 )
_sections_unfolded = [ "Cell" ]

[node name="Levelupbar_academy" type="TextureProgress" parent="LevelupScheme" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -78.0
margin_top = -183.0
margin_right = 143.0
margin_bottom = -134.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = ExtResource( 9 )
texture_over = null
texture_progress = ExtResource( 10 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
script = ExtResource( 11 )
_sections_unfolded = [ "Textures" ]

[connection signal="upgrade_academy_building" from="." to="LevelupScheme/Levelupbar_academy" method="_on_AcademyBuilding_upgrade_academy_building"]

[connection signal="building_complete" from="Building_UI/Building_ProgBar" to="." method="_on_Building_ProgBar_building_complete"]

[connection signal="building_complete" from="Building_UI/Building_ProgBar" to="BldgImg" method="_on_Building_ProgBar_building_complete"]

[connection signal="upgrade_academy_bldg_complete" from="LevelupScheme/Levelupbar_academy" to="." method="_on_Levelupbar_academy_upgrade_academy_bldg_complete"]

[connection signal="upgrade_academy_bldg_complete" from="LevelupScheme/Levelupbar_academy" to="LevelupScheme/level2_academyimg" method="_on_Levelupbar_academy_upgrade_academy_bldg_complete"]


